correct sidenav z-index

--- a/src/Components/Navbar/Scss/navbar.scss
+++ b/src/Components/Navbar/Scss/navbar.scss
@@ -145,7 +145,7 @@ header {
     width: 100%;
     height: 100%;
     background: #fffaf2;
-    z-index: 9999999999999999999999999999999999;
+    z-index: 9999999999999999;
     padding: 0 1.5rem;
     box-shadow: 0px 2px 50px 2px rgba(0, 0, 0, 0.15);
     transition: all .3s;
